// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with \`exclude\` option matches snapshot for a single \`exclude\` value: assets 1`] = `
Array [
  "5b1f36bc41ab31f5b801d48ba1d65781.png",
  "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
  "96621d3c37d96ad3bf792fcc848d912f.svg",
  "js.js.gz?var=5a02b232684b82d96c60",
  "js.js?var=5a02b232684b82d96c60",
]
`;

exports[`when applied with \`exclude\` option matches snapshot for a single \`exclude\` value: errors 1`] = `Array []`;

exports[`when applied with \`exclude\` option matches snapshot for a single \`exclude\` value: warnings 1`] = `Array []`;

exports[`when applied with \`exclude\` option matches snapshot for multiple \`exclude\` values: assets 1`] = `
Array [
  "5b1f36bc41ab31f5b801d48ba1d65781.png",
  "96621d3c37d96ad3bf792fcc848d912f.svg",
  "js.js.gz?var=5a02b232684b82d96c60",
  "js.js?var=5a02b232684b82d96c60",
]
`;

exports[`when applied with \`exclude\` option matches snapshot for multiple \`exclude\` values: errors 1`] = `Array []`;

exports[`when applied with \`exclude\` option matches snapshot for multiple \`exclude\` values: warnings 1`] = `Array []`;
